# Simple-Torrent-Client

./: .gitignore  CMakeLists.txt  README.md
include/core/: Piece.hpp  PieceStorage.hpp  TorrentClient.hpp  TorrentFile.hpp  TorrentTracker.hpp  UdpTracker.hpp
include/net/: Message.hpp  PeerConnect.hpp  TcpConnect.hpp  UdpClient.hpp
include/utils/: BencodeParser.hpp  byte_tools.hpp
src/: CMakeLists.txt  main.cpp
src/core/: Piece.cpp  PieceStorage.cpp  TorrentClient.cpp  TorrentFile.cpp  TorrentTracker.cpp  UdpTracker.cpp
src/net/: Message.cpp  PeerConnect.cpp  TcpConnect.cpp  UdpClient.cpp
src/utils/: BencodeParser.cpp  byte_tools.cpp
